--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-sharp": "^3.1.0",
     "katex": "^0.10.0",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.33",
     "node-sass": "^5.0.0",
     "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
