--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "gatsby": "^3.1.0",
+    "gatsby": "^3.14.6",
     "gatsby-plugin-feed": "^3.1.0",
     "gatsby-plugin-google-analytics": "^3.1.0",
     "gatsby-plugin-image": "^1.1.0",
@@ -21,6 +21,7 @@
     "gatsby-plugin-sharp": "^3.1.0",
     "gatsby-remark-copy-linked-files": "^3.1.0",
     "gatsby-remark-images": "^4.1.0",
+    "gatsby-remark-images-grid": "^1.2.0",
     "gatsby-remark-katex": "^4.1.0",
     "gatsby-remark-prismjs": "^4.1.0",
     "gatsby-source-filesystem": "^3.1.0",
